Add tracking to form page landing

--- a/rca/project_styleguide/templates/patterns/pages/forms/form_page_landing.html
+++ b/rca/project_styleguide/templates/patterns/pages/forms/form_page_landing.html
@@ -19,3 +19,15 @@
     </div>
 
 {% endblock %}
+{% block extra_js %}
+    {% if GOOGLE_TAG_MANAGER_ID %}
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            window.dataLayer.push({
+                'event':'form-submission',
+                'formId': '{{ page.id }}',
+                'formName': '{{ page.title }} form'
+            });
+        </script>
+    {% endif %}
+{% endblock%}
