Calculating spacers in opposite sections so we don’t get scrollbars

--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -297,14 +297,14 @@
             top: 0;
             height: 100%;
             content: '';
-            width: 200%;
+            width: 300%;
             transform: translate3d(-100%, 0, 0);
 
             #{$root}__notch--opposite & {
                 left: auto;
-                right: calc(var(--margin-width) * -1); // Make negative
+                right: 1px;
+                transform: translate3d(100%, 0, 0);
                 transform: translate3d(0, 0, 0);
-                width: var(--margin-width);
             }
         }
 
@@ -320,6 +320,13 @@
                     grid-column: 5 / span 1;
                 }
             }
+
+            &::before {
+                #{$root}__notch--opposite & {
+                    right: calc(var(--margin-width) * -1); // Make negative
+                    width: var(--margin-width);
+                }
+            }
         }
 
         &--second-col {
@@ -332,6 +339,13 @@
 
                 #{$root}__notch--opposite & {
                     grid-column: 4 / span 2;
+                }
+            }
+
+            &::before {
+                #{$root}__notch--opposite & {
+                    right: calc((var(--margin-width)) * -1); // Make negative
+                    width: var(--margin-width);
                 }
             }
         }
@@ -350,6 +364,15 @@
                     grid-column: 4 / span 2;
                 }
             }
+
+            &::before {
+                #{$root}__notch--opposite & {
+                    right: calc(
+                        (var(--margin-width) + var(--outer-grid-width)) * -1
+                    ); // Make negative
+                    width: calc(var(--margin-width) + var(--outer-grid-width));
+                }
+            }
         }
 
         &--third-col {
@@ -364,6 +387,22 @@
                     grid-column: 3 / span 2;
                 }
             }
+
+            &::before {
+                #{$root}__notch--opposite & {
+                    right: calc((var(--margin-width) * -1)); // Make negative
+                    width: calc(var(--margin-width));
+
+                    @include media-query(large) {
+                        right: calc(
+                            (var(--margin-width) + var(--outer-grid-width)) * -1
+                        ); // Make negative
+                        width: calc(
+                            var(--margin-width) + var(--outer-grid-width)
+                        );
+                    }
+                }
+            }
         }
 
         &--fourth-col {
@@ -374,6 +413,22 @@
                     grid-column: 2 / span 3;
                 }
             }
+
+            &::before {
+                #{$root}__notch--opposite & {
+                    right: calc((var(--margin-width) * -1)); // Make negative
+                    width: calc(var(--margin-width));
+
+                    @include media-query(large) {
+                        right: calc(
+                            (var(--margin-width) + var(--outer-grid-width)) * -1
+                        ); // Make negative
+                        width: calc(
+                            var(--margin-width) + var(--outer-grid-width)
+                        );
+                    }
+                }
+            }
         }
 
         &--fifth-col {
@@ -382,6 +437,26 @@
 
                 #{$root}__notch--opposite & {
                     grid-column: 1 / span 3;
+                }
+            }
+
+            &::before {
+                #{$root}__notch--opposite & {
+                    right: calc((var(--margin-width) * -1)); // Make negative
+                    width: calc(var(--margin-width));
+
+                    @include media-query(large) {
+                        right: calc(
+                            (
+                                    var(--margin-width) + var(--grid-width) +
+                                        var(--outer-grid-width)
+                                ) * -1
+                        ); // Make negative
+                        width: calc(
+                            var(--margin-width) + var(--grid-width) +
+                                var(--outer-grid-width)
+                        );
+                    }
                 }
             }
         }
