Removing section--opposite-notch class - no longer required

--- a/rca/project_styleguide/templates/patterns/atoms/section/section-opposite-example.html
+++ b/rca/project_styleguide/templates/patterns/atoms/section/section-opposite-example.html
@@ -2,7 +2,7 @@
 
 <h2 class="heading heading--two">First col notch - opposite</h2>
 
-<div class="section section--opposite-notch bg bg--light">
+<div class="section bg bg--light">
     <div class="section__row">
         <div class="section__content">
             Light
@@ -12,7 +12,7 @@
         <div class="section__notch-fill section__notch-fill--first-col"></div>
     </div>
 </div>
-<div class="section section--opposite-notch bg bg--dark">
+<div class="section bg bg--dark">
     <div class="section__row">
         <div class="section__content">
             Dark
@@ -25,7 +25,7 @@
 
 <h2 class="heading heading--two">Second col notch - opposite</h2>
 
-<div class="section section--opposite-notch bg bg--light">
+<div class="section bg bg--light">
     <div class="section__row">
         <div class="section__content">
             Light
@@ -35,7 +35,7 @@
         <div class="section__notch-fill section__notch-fill--second-col"></div>
     </div>
 </div>
-<div class="section section--opposite-notch bg bg--dark">
+<div class="section bg bg--dark">
     <div class="section__row">
         <div class="section__content">
             Dark
@@ -48,7 +48,7 @@
 
 <h2 class="heading heading--two">Third col notch - opposite</h2>
 
-<div class="section section--opposite-notch bg bg--light">
+<div class="section bg bg--light">
     <div class="section__row">
         <div class="section__content">
             Light
@@ -58,7 +58,7 @@
         <div class="section__notch-fill section__notch-fill--third-col"></div>
     </div>
 </div>
-<div class="section section--opposite-notch bg bg--dark">
+<div class="section bg bg--dark">
     <div class="section__row">
         <div class="section__content">
             Dark
@@ -71,7 +71,7 @@
 
 <h2 class="heading heading--two">Fourth col notch - opposite</h2>
 
-<div class="section section--opposite-notch bg bg--light">
+<div class="section bg bg--light">
     <div class="section__row">
         <div class="section__content">
             Light
@@ -81,7 +81,7 @@
         <div class="section__notch-fill section__notch-fill--fourth-col"></div>
     </div>
 </div>
-<div class="section section--opposite-notch bg bg--dark">
+<div class="section bg bg--dark">
     <div class="section__row">
         <div class="section__content">
             Dark
@@ -94,7 +94,7 @@
 
 <h2 class="heading heading--two">Fifth col notch - opposite</h2>
 
-<div class="section section--opposite-notch bg bg--light">
+<div class="section bg bg--light">
     <div class="section__row">
         <div class="section__content">
             Light
@@ -104,7 +104,7 @@
         <div class="section__notch-fill section__notch-fill--fifth-col"></div>
     </div>
 </div>
-<div class="section section--opposite-notch bg bg--dark">
+<div class="section bg bg--dark">
     <div class="section__row">
         <div class="section__content">
             Dark
