--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -44,7 +44,7 @@
 
         <div class="page__content">
 
-            <section class="section section--opposite-notch bg bg--light">
+            <section class="section bg bg--light">
 
                 <div class="section__notch">
                     <div class="section__notch-fill section__notch-fill--second-col"></div>
