--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
@@ -103,7 +103,7 @@
             </section>
 
             {% if research_opportunities %}
-                <section class="opportunities-to-work section section--opposite-notch section--above-grid bg bg--light">
+                <section class="opportunities-to-work section section--above-grid bg bg--light">
 
                     <div class="section__notch section__notch--opposite">
                         <div class="section__notch-fill section__notch-fill--second-col"></div>
@@ -127,7 +127,7 @@
             {% endif %}
 
             {% if related_programmes.0.related_items %}
-                <section class="section section--notch-mask section--opposite-notch bg bg--dark">
+                <section class="section section--notch-mask bg bg--dark">
 
                     {% if research_opportunities %}
                         <div class="section__notch section__notch--opposite">
