--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
@@ -57,7 +57,7 @@
 
         <div class="page__content">
 
-            <section class="section bg bg--dark {% if page.gallery %}section--opposite-notch{% endif %}">
+            <section class="section bg bg--dark">
 
                 <div class="section__row staff-body">
                     <div class="staff-body__container grid">
