--- a/rca/project_styleguide/templates/patterns/pages/wagtail/password_required.html
+++ b/rca/project_styleguide/templates/patterns/pages/wagtail/password_required.html
@@ -16,7 +16,7 @@
 
         </header>
         <div class="page__content">
-            <section class="section section--opposite-notch bg bg--light">
+            <section class="section bg bg--light">
                 <div class="section__row section__row--last section__row--first grid">
                     <form action="{{ action_url }}" method="post">
                         <div>
