--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--enterprise.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--enterprise.html
@@ -92,7 +92,7 @@
             {% endif %}
 
             {% if related_pages %}
-                <section class="landing-page__middle section section--start section--opposite-notch bg bg--light">
+                <section class="landing-page__middle section section--start bg bg--light">
 
                     <div class="section__row research-spaces">
                         <div class="section__header section__header--bottom-space grid">
@@ -134,7 +134,7 @@
             {% endif %}
 
             {% if page_list %}
-                <section class="section section--opposite-notch bg bg--light">
+                <section class="section bg bg--light">
                     <div class="section__row section__row--first {% if page.news %}section__row--last-large{% else %}section__row--last{% endif %}">
                         {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with related_sections=page_list title=page.page_list_title modifier="after-action related-content--meta-new-line" %}
                     </div>
