--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.html
@@ -83,7 +83,7 @@
             {% endif %}
 
             {% if page_list %}
-                <section class="section section--opposite-notch bg bg--light">
+                <section class="section bg bg--light">
                     <div class="section__row section__row--first section__row--last-large">
                         {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with related_sections=page_list title=page.page_list_title modifier="after-action related-content--meta-new-line" %}
                     </div>
