--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_index.html
@@ -31,7 +31,7 @@
 
         <form class="page__content js-detect-sticking js-tabs" id="results" method="GET" URL="#results">
 
-            <section class="section section--opposite-notch bg bg--dark filter-bar filter-bar--large" data-filter-bar>
+            <section class="section bg bg--dark filter-bar filter-bar--large" data-filter-bar>
                 <div class="section__notch section__notch--opposite">
 
                     <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col">
