Changing example section from dark to light

--- a/rca/project_styleguide/templates/patterns/atoms/section/section-example.html
+++ b/rca/project_styleguide/templates/patterns/atoms/section/section-example.html
@@ -71,7 +71,7 @@
 
 <h2 class="heading heading--two">Fourth col notch</h2>
 
-<div class="section section--start bg bg--dark">
+<div class="section section--start bg bg--light">
     <div class="section__row">
         <div class="section__content">
             Light
