Adds extra fields to the student page model

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--student.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--student.html
@@ -1,3 +1,5 @@
+{% load wagtailcore_tags %}
+
 {% if related_schools or research_centres or areas or supervisors or personal_website %}
     <div class="key-details key-details--student">
         <div class="key-details__header">
@@ -49,15 +51,13 @@
                 </ul>
             </div>
         {% endif %}
-        {% if funding %}
+        {% if page.student_funding %}
             <div class="key-details__section key-details__section--supervisors">
                 <h4 class="body body--two key-details__sub-heading">Funding</h4>
                 <ul class="key-details__list">
-                    {% for item in funding %}
-                        <li class="key-details__list-item">
-                            <a href="{{ item.link }}" class="link link--tertiary">{{ item.title }}</a>
-                        </li>
-                    {% endfor %}
+                    <li class="key-details__list-item">
+                        {{ page.student_funding|richtext }}
+                    </li>
                 </ul>
             </div>
         {% endif %}
