--- a/rca/static_src/sass/components/_hero.scss
+++ b/rca/static_src/sass/components/_hero.scss
@@ -14,11 +14,19 @@
         width: 100%;
         height: 100vh; /* Fallback for browsers that do not support Custom Properties */
         height: calc(var(--vh, 1vh) * 100);
+
+        #{$root}__image {
+            height: 100vh;
+
+            @include media-query(medium) {
+                height: 100%;
+            }
+        }
     }
 
     &__image {
         width: 100%;
-        height: 100vh;
+        height: 100%;
         object-fit: cover;
         min-height: 340px;
 
