--- a/rca/project_styleguide/templates/patterns/organisms/news/news_api_content.html
+++ b/rca/project_styleguide/templates/patterns/organisms/news/news_api_content.html
@@ -5,7 +5,7 @@
             <div class="news__feature">
         {% endif %}
 
-        {% if forloop.counter == 2 or forloop.last %}
+        {% if forloop.counter == 2 %}
             <div class="news__sub-features">
         {% endif %}
 
@@ -15,7 +15,7 @@
             </div>
         {% endif %}
 
-        {% if forloop.last %}
+        {% if forloop.last and not forloop.first %}
                 <a class="news__view-all link link--primary link--link body body--two" href="/news-and-events/">
                     <span class="link__label">See all news & events</span>
                     <svg class="link__icon" width="12" height="8"><use xlink:href="#arrow"></use></svg>
