--- a/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
@@ -82,9 +82,10 @@
 
                             {% if page.link_to_final_thesis %}
                             <div class="staff-body__action">
-                                <a class="link link--primary link--link body body--two" href="{{ page.link_to_final_thesis }}">
+                                <a class="link link--primary link--link body body--two link--external" href="{{ page.link_to_final_thesis }}" target="_blank">
                                     <span class="link__label">See final thesis</span>
-                                    <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
+                                    <svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg>
+                            </a>
                                 </a>
                             </div>
                             {% endif %}
