--- a/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
@@ -83,7 +83,7 @@
                             {% if page.link_to_final_thesis %}
                             <div class="staff-body__action">
                                 <a class="link link--primary link--link body body--two link--external" href="{{ page.link_to_final_thesis }}" target="_blank">
-                                    <span class="link__label">See final thesis</span>
+                                    <span class="link__label">Visit the RCA Research Repository to access the final thesis</span>
                                     <svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg>
                             </a>
                                 </a>
