Adding rich text element for use in forms

--- a/rca/static_src/sass/components/_form-item.scss
+++ b/rca/static_src/sass/components/_form-item.scss
@@ -390,6 +390,11 @@
         }
     }
 
+    &__rich-text {
+        margin: 0;
+        display: inline-block;
+    }
+
     input,
     textarea,
     select {
