--- a/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/student/student_detail.html
@@ -45,7 +45,7 @@
                         <div class="title-area__job-titles">
                             <div class="job-titles">
                                 <ul class="job-titles__item">
-                                <li class="job-titles__title">{{ page.degree_status }} {{ page.degree_type }} student {% if page.degree_end_date %}- {{ page.degree_end_date|date:'Y' }}{% endif %}</li>
+                                <li class="job-titles__title">{{ page.degree_status }} MPhil/PhD student {% if page.degree_end_date %}- {{ page.degree_end_date|date:'Y' }}{% endif %}</li>
                                     <li class="job-titles__department" property="schema:award">
                                         <a class="body body--two link link--tertiary" href="#">{{ page.programme }}</a>
                                     </li>
