--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_index.html
@@ -65,9 +65,11 @@
             <div class="filter-takeover bg bg--light">
                 <div class="filter-takeover__container">
                     {% for item in filters.items %}
-                        <div class="filter-takeover__tab-content tabs__panel tabs__panel--hidden js-tab-panel" id="{{ item.filter_name }}" role="tabpanel" aria-labelledby="tab-{{ item.filter_name }}">
-                            {% include "patterns/molecules/filter-tab-options/filter-tab-options.html" %}
-                        </div>
+                        {% if item.queryset %}
+                            <div class="filter-takeover__tab-content tabs__panel tabs__panel--hidden js-tab-panel" id="{{ item.filter_name }}" role="tabpanel" aria-labelledby="tab-{{ item.filter_name }}">
+                                {% include "patterns/molecules/filter-tab-options/filter-tab-options.html" %}
+                            </div>
+                        {% endif %}
                     {% endfor %}
                 </div>
             </div>
