Moving theme logic to homepage template

--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -3,6 +3,8 @@
 
 {% block body_class %}app--homepage{% endblock %}
 
+{% block header_class %}theme-{{ hero_colour }}{% endblock %}
+
 {% block content %}
 
     {% include "patterns/molecules/hero/hero--home.html" with modifier="home" scrolldown=true %}
