--- a/rca/static_src/sass/components/_search-toggle.scss
+++ b/rca/static_src/sass/components/_search-toggle.scss
@@ -11,6 +11,11 @@
     &__label {
         @include font-size(xxxs);
         margin-left: ($gutter / 2);
+        color: $color--white;
+    }
+
+    &__icon {
+        fill: $color--white;
     }
 
     .app__navigation & {
@@ -27,28 +32,6 @@
             @include media-query(medium) {
                 margin-top: 0;
             }
-        }
-    }
-
-    .theme-dark & {
-        #{$root}__label {
-            color: $color--black;
-        }
-
-        #{$root}__icon {
-            fill: $color--black;
-        }
-    }
-
-    .theme-light &,
-    .headroom--pinned.headroom--not-top &,
-    .app__navigation & {
-        #{$root}__label {
-            color: $color--white;
-        }
-
-        #{$root}__icon {
-            fill: $color--white;
         }
     }
 }
