Rearranging header setup

--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -136,6 +136,8 @@ $image-offset-right: -($gutter * 3);
 // Magic number
 // Header when headroom is active
 $mini-header-height: 80px;
+$header-height-small: 98px;
+$header-height-large: 90px;
 
 // --------------------------------- Transitions --------------------------------------
 
