--- a/rca/static_src/sass/layout/_header.scss
+++ b/rca/static_src/sass/layout/_header.scss
@@ -28,6 +28,10 @@
             position: relative;
             padding-top: ($gutter * 2);
 
+            @include media-query(medium) {
+                padding-top: ($gutter * 1.5);
+            }
+
             @include media-query(large) {
                 // Menu buttons aligned with global header icons
                 padding-top: 33px;
@@ -145,6 +149,10 @@
     &__inner {
         background: $color--primary;
         padding-top: ($gutter * 2);
+
+        @include media-query(medium) {
+            padding-bottom: ($gutter * 1.5);
+        }
 
         @include media-query(large) {
             padding-top: 33px; // logo aligned with logo below
