--- a/rca/static_src/sass/components/_logo.scss
+++ b/rca/static_src/sass/components/_logo.scss
@@ -44,6 +44,7 @@
         height: auto;
         fill: $color--white;
         transition: transform $transition-cubic;
+        transform-origin: left;
     }
 
     .header & {
