Fine tuning header space

--- a/rca/static_src/sass/components/_logo.scss
+++ b/rca/static_src/sass/components/_logo.scss
@@ -47,7 +47,8 @@
         transform-origin: left;
     }
 
-    .header & {
+    .header &,
+    .app__navigation & {
         #{$root}__image {
             width: 140px;
 
