--- a/rca/static_src/sass/components/_app.scss
+++ b/rca/static_src/sass/components/_app.scss
@@ -18,7 +18,7 @@
         position: fixed;
         width: 100%;
         top: 0;
-        transition: transform $transition;
+        transition: transform $transition-cubic;
 
         // Hide when scrolling down
         .headroom--not-top & {
@@ -36,7 +36,7 @@
         @include z-index(nav);
         pointer-events: none;
         transform: translate3d(-100%, 0%, 0);
-        transition: transform $transition-cubic 0.75ms;
+        transition: transform $transition-cubic;
         position: fixed;
         top: 0;
         left: 0;
@@ -61,14 +61,6 @@
             }
         }
     }
-
-    // &__content {
-    //     padding-top: $header-height-small;
-
-    //     @include media-query(large) {
-    //         padding-top: $header-height-large;
-    //     }
-    // }
 
     &__search {
         &--tablet {
