Applying BE util tag to FE

--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_index.html
@@ -12,8 +12,10 @@
     {% else %}
         {{ page.title }}
     {% endif %}
-    –
-    {% get_all_active_filters filters %}
+    {% get_all_active_filters filters as active_filters %}
+    {% if active_filters %}
+        – {{ active_filters }}
+    {% endif %}
     – Page {{ results.number }} of {{ results.paginator.num_pages }}
 {% endblock %}
 
