--- a/rca/static_src/sass/components/_logo.scss
+++ b/rca/static_src/sass/components/_logo.scss
@@ -83,7 +83,7 @@
         }
 
         #{$root}__image {
-            transform: scale(57%);
+            transform: scale(0.57);
         }
 
         &::before {
@@ -100,7 +100,7 @@
         padding-bottom: 0;
 
         #{$root}__image {
-            transform: scale(57%);
+            transform: scale(0.57);
         }
 
         &::before {
