Don’t format multi select on mobile devices

--- a/rca/static_src/sass/components/_form-item.scss
+++ b/rca/static_src/sass/components/_form-item.scss
@@ -227,7 +227,9 @@
 
     &--multiple_choice_field {
         select {
-            min-height: 150px;
+            @include media-query(large) {
+                min-height: 150px;
+            }
         }
     }
 
