Matching font size to menu/search

--- a/rca/static_src/sass/components/_audience-nav-item.scss
+++ b/rca/static_src/sass/components/_audience-nav-item.scss
@@ -49,7 +49,7 @@
         }
 
         #{$root}__label {
-            @include font-size(xxs);
+            @include font-size(xxxs);
         }
     }
 
