Centreing audience nav items

--- a/rca/static_src/sass/components/_audience-nav-item.scss
+++ b/rca/static_src/sass/components/_audience-nav-item.scss
@@ -45,7 +45,7 @@
 
         @include media-query(large) {
             display: flex;
-            align-items: flex-start;
+            align-items: center;
         }
 
         #{$root}__label {
